<resources>
    <string name="app_name">Room XML Views Experiment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_users">Add users</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="add">Add</string>
    <string name="age">Age</string>
    <string name="id_placeholder">ID</string>
    <string name="firstname_placeholder">Firstname</string>
    <string name="lastname_placeholder">Lastname</string>
    <string name="age_placeholder">(Age)</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>